--- a/.gitignore
+++ b/.gitignore
@@ -161,6 +161,8 @@ data_loader_all.py
 
 checkpoints/
 results/
+/training_visuals
+/training_visuals_2
 result_long_term_forecast.txt
 result_anomaly_detection.txt
 scripts/augmentation/
